--- a/ElevenNote.Web/Views/Notes/Index.cshtml
+++ b/ElevenNote.Web/Views/Notes/Index.cshtml
@@ -20,6 +20,13 @@
     </div>
 }
 
+<form asp-controller="Notes" asp-action="Index">
+    <p>
+        Contents or Title: <input type="text" name="search" />
+        <input type="submit" value="Filter" />
+    </p>
+</form>
+
 <table class="table">
     <tr>
         <th>
