--- a/ElevenNote.Web/Views/Notes/IsStarred.cshtml
+++ b/ElevenNote.Web/Views/Notes/IsStarred.cshtml
@@ -34,7 +34,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
-            <td>
+            <td style="padding-left: 5%">
                 @Html.DisplayFor(modelItem => item.IsStarred, new { Id = item.NoteId })
             </td>
             <td>
