--- a/ElevenNote.Web/Views/Home/Index.cshtml
+++ b/ElevenNote.Web/Views/Home/Index.cshtml
@@ -5,4 +5,13 @@
 <div class="jumbotron">
     <h1>Eleven Note</h1>
     <p class="lead">Take notes and save them in the cloud.</p>
+    <h2>Concepts Demonstrated in This Site</h2>
+    <ul>
+        <li>ASP.NET MVC</li>
+        <li>Entitiy Framework Code First Approach</li>
+        <li>Azure Deployment</li>
+        <li>Search on title and contents columns</li>
+        <li>Used ajax to update starred column in notes view</li>
+        <li>Display templates used for created and starred columns</li>
+    </ul>
 </div>
