Updated home page.

--- a/ElevenNote.Web/Views/Home/Index.cshtml
+++ b/ElevenNote.Web/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="jumbotron">
     <h1>Eleven Note</h1>
     <p class="lead">Take notes and save them in the cloud.</p>
-    <h2>Concepts Demonstrated in This Site</h2>
+    <h2>Concepts demonstrated on this site</h2>
     <ul>
         <li>ASP.NET MVC</li>
         <li>Entitiy Framework Code First Approach</li>
