Added image to home page.

--- a/ElevenNote.Web/Views/Home/Index.cshtml
+++ b/ElevenNote.Web/Views/Home/Index.cshtml
@@ -2,16 +2,18 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>Eleven Note</h1>
-    <p class="lead">Take notes and save them in the cloud.</p>
-    <h2>Concepts demonstrated on this site</h2>
-    <ul>
-        <li>ASP.NET MVC</li>
-        <li>Entitiy Framework Code First Approach</li>
-        <li>Azure Deployment</li>
-        <li>Search on title and contents columns</li>
-        <li>Used ajax to update starred column in notes view</li>
-        <li>Display templates used for created and starred columns</li>
-    </ul>
+<div class="row">
+    <div class="col-sm-5"><img width="450" src="~/images/ElevenNote1.gif" /></div>
+    <div class="col-sm-7">
+        <h1>Take notes and save them in the cloud.</h1>
+        <h2>Concepts demonstrated on this site</h2>
+        <ul>
+            <li>ASP.NET MVC</li>
+            <li>Entitiy Framework code first design</li>
+            <li>Azure deployment</li>
+            <li>Search on title and contents columns</li>
+            <li>Used ajax to update starred column in notes view</li>
+            <li>Used display templates for created and starred columns</li>
+        </ul>
+    </div>
 </div>
