--- a/ElevenNote.Web/Views/Home/Index.cshtml
+++ b/ElevenNote.Web/Views/Home/Index.cshtml
@@ -14,6 +14,7 @@
             <li>Search on title and contents columns</li>
             <li>Used ajax to update starred column in notes view</li>
             <li>Used display templates for created and starred columns</li>
+            <li>View the code for this application at: <a href="https://github.com/davemaz/ElevenNote">https://github.com/davemaz/ElevenNote</a></li>
         </ul>
     </div>
 </div>
