Updated home page.

--- a/ElevenNote.Web/Views/Home/Index.cshtml
+++ b/ElevenNote.Web/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <div class="col-sm-5"><img width="450" src="~/images/ElevenNote1.gif" /></div>
     <div class="col-sm-7">
         <h1>Take notes and save them in the cloud.</h1>
-        <h2>Concepts demonstrated on this site</h2>
+        <h2>Concepts demonstrated on this site:</h2>
         <ul>
             <li>ASP.NET MVC</li>
             <li>Entitiy Framework code first design</li>
@@ -14,7 +14,7 @@
             <li>Search on title and contents columns</li>
             <li>Used ajax to update starred column in notes view</li>
             <li>Used display templates for created and starred columns</li>
-            <li>View the code for this application at: <a href="https://github.com/davemaz/ElevenNote">https://github.com/davemaz/ElevenNote</a></li>
         </ul>
+        <p>View the code for this application at: <a href="https://github.com/davemaz/ElevenNote">https://github.com/davemaz/ElevenNote</a></p>
     </div>
 </div>
